# SparkCyclone

./: .gitignore  README.md  build.sbt
.github/workflows/: benchmark-collector-all.yml  benchmark-collector.yml  main.yml
aurora4spark-parent/aurora4spark-sql-plugin/: build.sbt
aurora4spark-parent/aurora4spark-sql-plugin/src/test/resources/: sum.py
aurora4spark-parent/aurora4spark-sql-plugin/ve-direct/src/it/scala/: SomeTest.scala
aveo4j-repo/com/nec/aurora-presets/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
aveo4j-repo/com/nec/aurora-presets/0.1.0-SNAPSHOT/: aurora-presets-0.1.0-20210505.203509-1.jar.md5  aurora-presets-0.1.0-20210505.203509-1.jar.sha1  aurora-presets-0.1.0-20210505.203509-1.pom  aurora-presets-0.1.0-20210505.203509-1.pom.md5  aurora-presets-0.1.0-20210505.203509-1.pom.sha1  maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
project/: CMakeBuilder.scala
src/main/cpp/: CMakeLists.txt  Makefile  cyclone.cc  cyclone.hpp  transfer-definitions.hpp
src/main/cpp/frovedis/text/: words.cc
src/main/scala/com/nec/arrow/: ArrowNativeInterface.scala  ArrowNativeInterfaceNumeric.scala  VeArrowNativeInterface.scala  VeArrowNativeInterfaceNumeric.scala  VeArrowTransfers.scala
src/main/scala/com/nec/cmake/: CMakeBuilder.scala  TcpDebug.scala
src/main/scala/com/nec/native/: NativeCompiler.scala  NativeEvaluator.scala
tests/simple/: groups.py  groups_cpu.sh  groups_ve.sh
tests/tpchbench/: run_ve.sh
tpcbench-run/src/main/scala/sc/: GitHubInput.scala  RunBenchmarksApp.scala  RunOptions.scala
(+143 files in other folders)
